@@ -1,127 +1,177 @@
 plugins {
-    id 'eclipse'
-    id 'idea'
+    id 'java-library'
     id 'maven-publish'
-    id 'net.minecraftforge.gradle' version "${forge_gradle_version_range}"
-    id 'org.spongepowered.mixin' version '0.7.+'
-    id 'org.parchmentmc.librarian.forgegradle' version '1.+'
-
-
+    id 'net.neoforged.moddev' version '2.0.141'
+    id 'idea'
 }
-version = mod_version
-group = 'com.lycanitesmobs'
-archivesBaseName = 'lycanitesmobs'
 
-java.toolchain.languageVersion = JavaLanguageVersion.of(17)
+version = "0.0.1"
+group = "com.lycanite.core"
 
-println('Java: ' + System.getProperty('java.version') + ' JVM: ' + System.getProperty('java.vm.version') + '(' + System.getProperty('java.vendor') + ') Arch: ' + System.getProperty('os.arch'))
-minecraft {
-    mappings channel: mapping_channel, version: mapping_version
-    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+base {
+    archivesName = "lycanitesmobs"
+}
+
+java.toolchain.languageVersion = JavaLanguageVersion.of(21)
+
+repositories {
+    mavenCentral()
+
+    maven {
+        url = "https://api.modrinth.com/maven"
+    }
+}
+
+sourceSets.main.resources {
+    srcDir 'src/generated/resources'
+}
+
+neoForge {
+    version = neo_version
+
+    parchment {
+        mappingsVersion = parchment_mappings_version
+        minecraftVersion = parchment_minecraft_version
+    }
 
     runs {
+
         configureEach {
-            property('terminal.ansi', 'true')
+            logLevel = org.slf4j.event.Level.DEBUG
+            systemProperty 'forge.logging.markers', 'REGISTRIES'
         }
+
         client {
-            workingDirectory project.file('run')
-            args '--mixin.config=lycanitesmobs.mixins.json', '--debug', '--username', "Dev"
-            property 'forge.client.window.title', "Dev"
-            property 'forge.logging.console.level', 'debug'
-            property 'forge.enabledGameTestNamespaces', 'lycanitesmobs'
-            property 'mixin.env.remapRefMap', 'true'
-            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-            property 'forge.logging.markers', 'REGISTRIES'
-
-            //jvmArgs "-Xlog:gc*,safepoint:file=gc-client.log:time,uptime,level,tags"
-
-            mods {
-                lycanitesmobs {
-                    source sourceSets.main
-                }
-            }
+            client()
+            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
         }
 
         server {
-            workingDirectory project.file('run')
-            property 'forge.logging.markers', 'REGISTRIES'
-            property 'forge.logging.console.level', 'debug'
+            server()
+            programArgument '--nogui'
+            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
+        }
 
-            //jvmArgs "-Xlog:gc*,safepoint:file=gc-server.log:time,uptime,level,tags"
-
-            mods {
-                lycanitesmobs {
-                    source sourceSets.main
-                }
-            }
+        gameTestServer {
+            type = "gameTestServer"
+            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
         }
 
         data {
-            workingDirectory project.file('run')
-            property 'forge.logging.markers', 'REGISTRIES,REGISTRYDUMP'
-            property 'forge.logging.console.level', 'debug'
-            args '--mod', 'lycanitesmobs', '--all', '--output', file('src/generated/resources/')
+            data()
 
+            programArguments.addAll(
+                    '--mod', mod_id,
+                    '--all',
+                    '--output', file('src/generated/resources').absolutePath,
+                    '--existing', file('src/main/resources').absolutePath
+            )
+        }
+    }
 
-            mods {
-                lycanitesmobs {
-                    source sourceSets.main
-                }
-            }
+    mods {
+        "${mod_id}" {
+            sourceSet sourceSets.main
         }
     }
 }
 
-
-sourceSets.main.resources { srcDir 'src/generated/resources' }
-repositories {
-    mavenCentral()
-    maven {
-        url "https://cursemaven.com"
-        content {
-            includeGroup "curse.maven"
-        }
-    }
+configurations {
+    runtimeClasspath.extendsFrom localRuntime
 }
+
 dependencies {
-    minecraft fg.deobf("net.minecraftforge:forge:$minecraft_version-$forge_version")
-    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation fg.deobf("io.github.llamalad7:mixinextras-common:0.2.1")
-    implementation fg.deobf("curse.maven:oculus-581495:6020952")
-    implementation fg.deobf("curse.maven:embeddium-908741:5681725")
+
+    implementation "maven.modrinth:sodium:mc1.21.1-0.6.13-neoforge"
+
 }
 
-jar {
-    manifest {
-        attributes([
-                "Specification-Title"     : "lycanitesmobs",
-                "Specification-Vendor"    : "lycanite",
-                "Specification-Version"   : "1",
-                "Implementation-Title"    : project.name,
-                "Implementation-Version"  : "${minecraft_version}",
-                "Implementation-Vendor"   : "lycanite",
-                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
-                'MixinConfigs'            : "lycanitesmobs.mixins.json"
-        ])
-    }
+var generateModMetadata = tasks.register("generateModMetadata", ProcessResources) {
+
+    var replaceProperties = [
+            minecraft_version       : minecraft_version,
+            minecraft_version_range : minecraft_version_range,
+            neo_version             : neo_version,
+            loader_version_range    : loader_version_range,
+            mod_id                  : mod_id,
+            mod_name                : mod_name,
+            mod_license             : mod_license,
+            mod_version             : mod_version,
+            mod_authors             : mod_authors,
+            mod_description         : mod_description
+    ]
+
+    inputs.properties replaceProperties
+
+    expand replaceProperties
+
+    from "src/main/templates"
+    into "build/generated/sources/modMetadata"
 }
 
-jar.finalizedBy('reobfJar')
+sourceSets.main.resources.srcDir generateModMetadata
+
+neoForge.ideSyncTask generateModMetadata
 
 publishing {
+
     publications {
-        mavenJava(MavenPublication) {
-            artifact jar
+
+        register('mavenJava', MavenPublication) {
+            from components.java
         }
     }
+
     repositories {
+
         maven {
-            url "file:///${project.projectDir}/mcmodsrepo"
+            url = layout.projectDirectory.dir("repo")
         }
     }
 }
 
-mixin {
-    add sourceSets.main, "lycanitesmobs.refmap.json"
-    config "lycanitesmobs.mixins.json"
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(ProcessResources).configureEach {
+    includeEmptyDirs = false
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    from('src/main/java/common') {
+        into 'common/lycanitesmobs'
+        exclude 'lycanitesmobs/**'
+        include '**'
+    }
+    from('src/main/java/common/lycanitesmobs') {
+        into 'common/lycanitesmobs'
+        include '**'
+    }
+}
+
+var copyPrecompiledClasses = tasks.register('copyPrecompiledClasses', Sync) {
+    from('src/main/java/com') {
+        include '**/*.class'
+        eachFile { details ->
+            details.path = "com/lycanitesmobs/${details.path}"
+        }
+        includeEmptyDirs = false
+    }
+    into layout.buildDirectory.dir('classes/java/main')
+}
+
+tasks.named('classes').configure {
+    dependsOn copyPrecompiledClasses
+}
+
+tasks.named('jar', Jar).configure {
+    dependsOn copyPrecompiledClasses
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
+
+idea {
+
+    module {
+        downloadSources = true
+        downloadJavadoc = true
+    }
 }
